<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BioViz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="section_about">About</string>
    <string name="section_home">Home</string>
    <string name="section_occurrence_list">Occurrences</string>
    <string name="title_activity_occurrence_details">Occurrence details</string>
    <string name="share">Share</string>
    <string name="title_activity_occurrence_view">OccurrenceViewActivity</string>
    <string name="title_activity_gbifoccurrence_view">GBIFOccurrenceView</string>

    <!-- Home messages and tips -->
    <string name="m0">Welcome to the BioViz application! BioViz is focused on making it easy to find specific details about different species, allowing you to get in touch with the surrounding biodiversity.</string>
    <string name="m1">I will be your guide throughout this application. I would like you to know that my developer is very eager to get your feedback! If you want to know more about him, tap here.</string>
    <string name="m2">BioViz gets all its data from two main biodiversity sources: GBIF and iNaturalist. These are often used by biologists and biodiversity specialists to share data about different observations and sightseeings.</string>
    <string name="m3">You can customize the results shown in this application. This customization can go from requiring observations with images attached, to restricting network data to wifi-based connections.</string>
    <string name="m4">Although biodiversity is considered… very diverse (pun intended)… some records may have missing details. The result is that not all the items showed in the application will be available to open and get more details.</string>


    <!-- Home messages expanded -->
    <string name="m0e">Throughout the application, you will be able to explore biodiversity data and see what different researchers and biologists publish on the integrated platforms. You can also share any information you may find useful and manage your favorite species for a quick reference.</string>
    <string name="m1e">Hey! My name is Ricardo, I am the developer of this application. I am kinda new to this mobile application world so be patient if something goes wrong. I enjoy getting info about species around me and explore different locations\' habitats. With that in mind, I started developing this application and focused on searching for biodiversity exchange points to extract such data and show it to you in the application.</string>
    <string name="m2e">BioViz is this. iNaturalist is like a wikipedia-bioviz everyone can submit, no one cares about curating resources</string>
    <string name="m3e">If you want a more visually-intense experience, you can request that the search results include images of the observation. This is sometimes difficult to happen when getting results from GBIF, but it is still worth the try. iNaturalist is often richer in terms of related media and will certainly get all the results with images. Nevertheless, if a specific observation has no pictures associated with it, it is still possible to get pictures from the associated species by clicking on it.</string>
    <string name="m4e">Behind the integrated platforms, there is a lot of effort to create extensive records, containing all possible details. Nevertheless, in some occasions researchers and biologists may not be able to further describe the species or add other details. This can be derived from several reasons, some of theme related to the curation of such records. As evolving platforms though, these inconveniences tend to disappear with time.</string>

    <string name="next">Next</string>
    <string name="loading">Loading…</string>
    <string name="trivia_error">I was unable to get this for you. Maybe there\'s a problem with your connection?</string>

    <string-array name="home_messages">
        <item>@string/m0</item>
        <item>@string/m1</item>
        <item>@string/m1</item>
        <item>@string/m3</item>
        <item>@string/m4</item>
    </string-array>

    <string-array name="home_expanded_messages">
        <item>@string/m1e</item>
        <item>@string/m1e</item>
        <item>@string/m3e</item>
        <item>@string/m4e</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="around_me">Around me</string>
    <string name="random">Random</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="kingdom">Kingdom</string>
    <string name="philae">Philae</string>
    <string name="phylum">Phylum</string>
    <string name="order">Order</string>
    <string name="family">Family</string>
    <string name="bioviz_moto">BioViz: finding biodiversity at home</string>
    <string name="i_failed">I have failed you, master....</string>
    <string name="developer_will_handle">But my developer will handle this</string>
    <string name="tap_here_relief">…meanwhile, tap here for some relief</string>
    <string name="biological_classification">Biological Classification</string>
    <string name="settings_header">BioViz was developed with love and affection. We try to create easy to use tools for you to explore your world of biodiversity. All the information here available is directly extracted from the registered sources and no text is edited in the meantime. We hope you enjoy using this app and feel free to submit any features request that you wish to be implemented in the future.</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="genus">Genus</string>
    <string name="species">Species</string>
    <string name="radom_occurrences">Random occurrences</string>
    <string name="random_occurrences">Random occurrences</string>
    <string name="tweaks_available">Some tweaks are also available…</string>
    <string name="require_images">Display only items with images. Although images allow to better visualize data, not all the records have images attached.</string>
    <string name="require_english">Only display english records. This will hide results that are written in other languages such as German or Portuguese.</string>
    <string name="save">Save</string>
    <string name="my_informers">My informers…</string>
    <string name="gbif">Global Biodiversity Information Facility</string>
    <string name="inat">iNaturalist, a community for naturalists</string>
    <string name="about_this_app">One thing or two about this app…</string>
    <string name="about">I developed this app to make it easy to discover different aspects of our biodiversity. The platforms connected to this app serve as data sources and thus, all the extracted data is of their full responsibility. It is possible that some of the records shown have missing or incomplete fields, and some of the information may seem repeated (even though it belongs to different records). From my standpoint, I will pursue to handle such cases and make this app better looking, for which and appreciate your feedback. Please also bear in mind that I am currently on a full-time job, which may leave me with little to no time to dedicate to further developments, but I\'ll keep up with it, I promise ;)</string>
    <string name="libraries">The libraries I use…</string>
    <string name="glide">Glide - An image loading and caching library for Android focused on smooth scrolling. I use it in the app to load media resources form different species or observations. https://github.com/bumptech/glide</string>
    <string name="gson">Gson - for serializing and deserializing json objects that come and go from and to the web. Check it here: https://code.google.com/p/google-gson/</string>
    <string name="volley">Volley - an extensive library to quicken the development of connected apps, making it easy to launch and manage web requests. https://developer.android.com/training/volley/index.html</string>
    <string name="pallette">Android Palette - a tool to easily generate a color code based on a bitmap resource. https://developer.android.com/reference/android/support/v7/graphics/Palette.html</string>
    <string name="allow_mobile_data">Use mobile data. Warning: when loading images, the application can use large ammounts of traffic. Please bear in mind your montlhy plan when using this option.</string>
    <string name="specimen_class">Class</string>
    <string name="section_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

</resources>
