<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bioviz.ricardo.bioviz.fragment.AboutFragment">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/text_blue_grey_darker"
        android:text="@string/bioviz_moto"
        />
    <TextView
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/settings_header"
        />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                style="@android:style/TextAppearance.Holo.Large"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:text="@string/my_informers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/card_view_gbif"
                    android:drawableTop="@drawable/ic_gbif_logo"
                    android:contentDescription="@string/app_name"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawablePadding="8dp"
                    android:clickable="true"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:text="@string/gbif"/>

                <TextView
                    android:id="@+id/card_view_iNat"
                    android:drawableTop="@drawable/ic_inat_logo"
                    android:contentDescription="@string/app_name"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawablePadding="8dp"
                    android:clickable="true"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:text="@string/inat" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                style="@android:style/TextAppearance.Holo.Large"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:text="@string/about_this_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="start"
                android:clickable="true"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:autoLink="web"
                android:text="@string/about" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                style="@android:style/TextAppearance.Holo.Large"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:text="@string/libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="start"
                android:clickable="true"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:autoLink="web"
                android:text="@string/glide" />

            <TextView
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="start"
                android:clickable="true"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:autoLink="web"
                android:text="@string/gson" />

            <TextView
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="start"
                android:clickable="true"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:autoLink="web"
                android:text="@string/volley" />

            <TextView
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="start"
                android:clickable="true"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:autoLink="web"
                android:text="@string/pallette" />


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
