<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/text_blue_grey_darker"
            android:text="@string/bioviz_moto"
            />

        <TextView
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/settings_header"
            />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tweaks_available"
                    android:textColor="@color/text_blue_grey_darker"
                    android:layout_marginBottom="10dp"
                    />

                <Switch
                    android:id="@+id/conf_sw_pictures"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_picture"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center"
                    android:text="@string/require_images"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Switch
                    android:id="@+id/conf_sw_language"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_language"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/require_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Switch
                    android:id="@+id/conf_sw_data"
                    android:drawableStart="@drawable/ic_data"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:text="@string/allow_mobile_data"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/conf_bt_save"
                    android:layout_marginTop="10dp"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>