<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="0dp"
        android:layout_margin="6dp"
        android:animateLayoutChanges="true"
        android:foreground="?android:attr/selectableItemBackground"
        >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            >


            <TextView
                android:id="@+id/tvDescriptionType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="start"
                android:textAppearance="@android:style/TextAppearance.Holo.WindowTitle"
                android:textColor="@color/text_blue_grey_darker"
                android:text="@string/type"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                />



            <TextView
                android:animateLayoutChanges="true"
                android:padding="5dp"
                android:layout_marginStart="6dp"
                android:layout_gravity="center_vertical|end"
                android:id="@+id/tvDescriptionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                />

            <TextView
                android:id="@+id/tvDescriptionLanguage"
                android:textColor="@android:color/darker_gray"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/language"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                >

                <ImageButton
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_copy"
                    android:id="@+id/description_item_copy"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    />

                <ImageButton
                    android:contentDescription="@string/app_name"
                    android:id="@+id/description_item_zoom_out"
                    android:src="@drawable/ic_minus"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    />

                <ImageButton
                    android:contentDescription="@string/app_name"
                    android:id="@+id/description_item_zoom_in"
                    android:src="@drawable/ic_plus"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:textColor="@android:color/darker_gray"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>